# symsolbin

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindCLN.cmake  FindGiNaC.cmake
examples/: diode.cpp  double_rlc.cpp  memristor.cpp  not.cpp  rc.cpp  rlc.cpp
include/symsolbin/model/: model_gen.hpp
include/symsolbin/simulation/: analog_pair.hpp  double_op.hpp  simulation.hpp
include/symsolbin/solver/: analog_model.hpp  classifier.hpp  ginac_helper.hpp  name_generator.hpp
include/symsolbin/structure/: edge.hpp  node.hpp  value.hpp
src/symsolbin/model/: generate_class.cpp  model_gen.cpp
src/symsolbin/solver/: analog_model.cpp  classifier.cpp
src/symsolbin/structure/: edge.cpp  node.cpp  value.cpp
